common-apps/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  annotations:
    app: longhorn-ingress
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/name: longhorn
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - longhorn.bensonphillips.dev
      secretName: letsencrypt
  ingressClassName: "nginx"
  rules:
    - host: longhorn.bensonphillips.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: longhorn-frontend
              port:
                number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
  labels:
    app: longhorn-ui
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: longhorn-ui
  clusterIP: None
